教师添加功能
修改了部分路径，增加了教师的添加功能

--- a/java-server/src/main/resources/application.properties
+++ b/java-server/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.jmx.enabled=false
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
-attach.folder=/teach/java2/
+attach.folder=/java3/
